--- a/ProjectSourceCode/package.json
+++ b/ProjectSourceCode/package.json
@@ -3,6 +3,7 @@
   "main": "src/index.js",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "ejs": "^2.5.5",
     "ejs-lint": "^0.3.0",
     "body-parser": "^1.20.0",
