--- a/ProjectSourceCode/package.json
+++ b/ProjectSourceCode/package.json
@@ -4,16 +4,24 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.0",
+    "dotenv": "^17.2.0",
     "ejs": "^2.5.5",
     "ejs-lint": "^0.3.0",
-    "body-parser": "^1.20.0",
     "express": "^4.6.1",
-    "express-session": "^1.17.3",
     "express-handlebars": "^7.1.2",
+    "express-session": "^1.17.3",
     "pg-promise": "^10.11.1"
   },
   "scripts": {
     "prestart": "npm install",
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "test": "mocha test/**/*.js"
+  },
+  "devDependencies": {
+    "chai": "^5.2.1",
+    "jest": "^30.0.4",
+    "mocha": "^11.7.1",
+    "supertest": "^7.1.3"
   }
 }
